[package]
name = "cowprotocol-solvers-dto-alloy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = { version = "0.8.19", features = ["serde"] }
alloy-rpc-types = "0.12.2"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.135" }
serde_with = "3.12.0"
